--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,44 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/water"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".Profile"
+    android:orientation="vertical">
 
     <EditText
-        android:id="@+id/emailRegister"
+        android:id="@+id/profileName"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_edittext"
-        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
-        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
-
-        android:hint="@string/email" />
+        android:hint="first name"
+        android:gravity="center"/>
 
     <EditText
-        android:id="@+id/passwordRegister"
+        android:id="@+id/profileAbout"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_edittext"
-        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
-        android:inputType="textPassword"
-        android:hint="@string/password" />
+        android:hint="About"
+        android:gravity="center"/>
 
     <Button
-        android:id="@+id/Login2"
+        android:id="@+id/profileAccept"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:enabled="false"
-        android:text="@string/loginButton" />
+        android:layout_marginTop="32dp"
+        android:text="Accept" />
 
 </LinearLayout>
