--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,7 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/ic_person_outline_black_24dp"
+        android:drawableStart="@drawable/ic_person_outline_black_24dp"
         android:hint="@string/nameHint" />
 
     <RadioGroup
@@ -29,18 +30,26 @@
         android:layout_marginRight="32dp">
 
         <RadioButton
+            android:id="@+id/radioMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Male" />
+            android:buttonTint="@color/radioButtonColor"
+            android:text="Male"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <RadioButton
+            android:id="@+id/radioFemale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Female" />
+            android:buttonTint="@color/radioButtonColor"
+            android:text="Female"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </RadioGroup>
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/emailRegister"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="32dp"
@@ -48,10 +57,11 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
+        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
         android:hint="@string/email" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/passwordRegister"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="32dp"
@@ -59,7 +69,9 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_edittext"
         android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-        android:hint="@string/password" />
+        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+        android:hint="@string/password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/Register2"
@@ -67,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
+        android:enabled="false"
         android:text="@string/registerButton" />
 
 </LinearLayout>
