--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,12 +21,37 @@
         android:drawableStart="@drawable/ic_person_outline_black_24dp"
         android:hint="@string/nameHint" />
 
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
+        <Button
+            android:id="@+id/dateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:layout_marginLeft="24dp"
+            android:hint="Birthday"
+            android:textStyle="bold"
+            android:background="@drawable/rounded_edittext"/>
+
+    <TextView
+        android:id="@+id/dayOfBirthRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="132dp"
+        android:layout_marginTop="11dp"
+        android:hint="AGE"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+    </RelativeLayout>
+
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="32dp">
 
         <RadioButton
