--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -3,6 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/matches"
+        android:title="Matches"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_baseline_favorite_24"
+        android:orderInCategory="1"
+        android:onClick="goMatches"
+        />
+
+    <item
         android:id="@+id/profile"
         android:title="Profile"
         app:showAsAction="ifRoom"
