--- a/app/src/main/res/layout/match_list_element.xml
+++ b/app/src/main/res/layout/match_list_element.xml
@@ -43,7 +43,19 @@
             android:layout_marginLeft="120dp"
             android:layout_marginTop="0dp"
             android:textSize="20dp"
-            android:text="ID" />
+            android:text="Wiek" />
+
+        <TextView
+            android:id="@+id/matchListTextViewId"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_below="@+id/matchListTextViewName"
+            android:layout_marginStart="220dp"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="0dp"
+            android:textSize="20dp"
+            android:text="" />
+
 
     </RelativeLayout>
 
