--- a/app/src/main/res/layout/chat_list_element.xml
+++ b/app/src/main/res/layout/chat_list_element.xml
@@ -2,20 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
         android:id="@+id/chat_element_layout"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:longClickable="false"
+        android:measureWithLargestChild="false"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
         <TextView
+            android:id="@+id/messageChat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Text"
-            android:id="@+id/messageChat"/>
-
+            android:text="Text" />
 
     </LinearLayout>
 
